# wa-energy

./: .claude.md  .env.example  .gitignore  README.md  api_context.txt  notes.md  pyproject.toml
src/wa_energy/: __init__.py  collect_demand_aemo.py  collect_wem_data.py  test_api.py
